# Course-work-OOP-sem-3

./: .gitignore  README.md  run_app.sh
database_project/: BUILDING.md  CMakeLists.txt  Makefile  PROJECT_SUMMARY.md  QtCreator_README.md  README.md  SoftwarePackageDatabase  SoftwarePackageDatabase.files  SoftwarePackageDatabase.pro  run_demo.sh  test.cpp  test.db  test_program
database_project/include/: CustomContainer.h  Database.h  MainWindow.h  SoftwarePackage.h
database_project/src/: Database.cpp  MainWindow.cpp  SoftwarePackage.cpp  main.cpp
